--- a/index.html
+++ b/index.html
@@ -428,6 +428,7 @@ footer{
             <li><a class="dropdown-item" href="https://camillesecrets.github.io/App2/">Interpretador de sonho</a></li>
             <li><a class="dropdown-item" href="https://camillesecrets.github.io/App/">Contador de calorias</a></li>
             <li><a class="dropdown-item" href="#demostracao">Especificações de Demonstração</a></li>
+            <li><a class="dropdown-item" href="#contato">Artigo Cientifico sobre I.A</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -706,6 +707,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
